fixed desktop more button alignment

--- a/myStyle.css
+++ b/myStyle.css
@@ -53,6 +53,8 @@ body {
   height: 550px;
   background-color: #9c9c9c;
   margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
